<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".DashBoardFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        android:elevation="10dp"
        android:text="@string/dashboard">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:baselineAligned="false"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@android:color/darker_gray"
                        android:text="@string/income"
                        android:layout_height="wrap_content"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@android:color/darker_gray"
                        android:text="@string/expense"
                        android:layout_height="wrap_content"/>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:baselineAligned="false"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="7dp"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/income_set_result"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textColor="@android:color/black"
                        android:text="@string/_000_00"
                        />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/expense_set_result"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textColor="@color/cardview_dark_background"
                        android:text="@string/_000_00"
                        />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>
        
    </androidx.cardview.widget.CardView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/income"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:padding="10dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/expense"
                    android:textAppearance="?android:textAppearanceLarge" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_income"
                    android:layout_width="match_parent"
                    android:layout_height="150dp">

                </androidx.recyclerview.widget.RecyclerView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_expense"
                    android:layout_width="match_parent"
                    android:layout_height="150dp">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>

        </ScrollView>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="185dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense"
                android:id="@+id/expense_ft_text"
                android:padding="15dp"
                android:textColor="@android:color/darker_gray"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:visibility="invisible"
                android:textAppearance="?android:textAppearanceSmall"
                />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/expense_Ft_btn"
                android:layout_gravity="bottom|end"
                android:elevation="30dp"
                app:fabSize="mini"
                android:visibility="invisible"
                app:pressedTranslationZ="12dp"
                android:src="@drawable/expense"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="135dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income"
                android:id="@+id/income_ft_text"
                android:textColor="@android:color/darker_gray"
                android:padding="5dp"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:visibility="invisible"
                android:textAppearance="?android:textAppearanceSmall"
                />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/income_Ft_btn"
                android:layout_gravity="bottom|end"
                android:elevation="12dp"
                app:fabSize="mini"
                app:pressedTranslationZ="12dp"
                android:visibility="invisible"
                android:src="@drawable/income"
                />

        </LinearLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fb_main_plus_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="70dp"
            android:backgroundTint="#FF9BA39B"
            android:padding="5dp"
            android:src="@drawable/income"
            app:elevation="6dp"
            app:fabSize="normal"
            app:pressedTranslationZ="6dp" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>